[tool.poetry]
name = "data-exploration-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_exploration_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.4"

[tool.pyright]
reportUnboundVariable = false
reportGeneralTypeIssues = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
